Fix Homepage Conditions

--- a/assets/css/show-product-table.css
+++ b/assets/css/show-product-table.css
@@ -1,5 +1,9 @@
 /* This file is related to `change-homepage-view.php` */
 
+#fubic-membership-table {
+    display: inline !important;
+}
+
 #fubic-membership-card {
     display: none !important;
 }
